adicionei mais mq para maior responsividade, menos a de celular

--- a/paginai.html
+++ b/paginai.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="telag.css"><!-- telas grandes-->
     <link rel="stylesheet" href="telag-m.css"><!-- telas grandes/médias-->
+    <link rel="stylesheet" href="telam.css"><!-- telas médias-->
+    <link rel="stylesheet" href="telap-m.css"><!-- telas pequenas/médias-->
 </head>
 <body>
     <header>
